--- a/examples/config.ini
+++ b/examples/config.ini
@@ -138,8 +138,8 @@ minimum_ttl = 1440 ; One day
 #[data_sources.Censys]
 #ttl = 10080
 #[data_sources.Censys.Credentials]
-#apikey =
-#secret =
+#apikey =515e0a6b-07e7-4e3a-8bf7-f0e7b7e783bf
+#secret =OCpRNx4I1NCK5YSisjs4E4HDSXsmsGyX
 
 # https://chaos.projectdiscovery.io (Free-InviteOnly)
 #[data_sources.Chaos]
@@ -260,7 +260,7 @@ minimum_ttl = 1440 ; One day
 #[data_sources.VirusTotal]
 #ttl = 10080
 #[data_sources.VirusTotal.Credentials]
-#apikey =
+#apikey =89
 
 # https://whoisxmlapi.com (Free)
 #[data_sources.WhoisXMLAPI]
